--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 
 <web-app>
 	<welcome-file-list>
-		<welcome-file>/WEB-INF/admin/login.jsp</welcome-file>
+		<welcome-file>/WEB-INF/welcome.html</welcome-file>
 	</welcome-file-list>
 
 	<filter>
