完成普通用户调研流程，UI优化

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>OnlineSurvey</display-name>
 
 	<welcome-file-list>
-		<welcome-file>/WEB-INF/welcome.html</welcome-file>
+		<welcome-file>/WEB-INF/welcome.jsp</welcome-file>
 	</welcome-file-list>
 
 	<filter>
