--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- 其他依赖 -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -65,4 +67,9 @@
 	<build>
 		<finalName>onlinesurvey</finalName>
 	</build>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 </project>
