--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,18 @@
-#log4j.category.org.nutz=DEBUG, A1
- 
-#log4j.appender.A1=org.apache.log4j.ConsoleAppender
-#log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-#log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
-
-#category.org.nutz.dao=DEBUG
-#category.org.nutz.ioc=DEBUG
-#category.org.nutz.mvc=DEBUG
+#log4j.rootLogger = [ level ] , appenderName, appenderName, ...
+log4j.rootLogger = INFO, console, R
+#level=INFO,all can be output
+#console is set to be a ConsoleAppender
+log4j.appender.console = org.apache.log4j.ConsoleAppender
+#console have four patterns
+#org.apache.log4j.HTMLLayout
+#org.apache.log4j.PatternLayout
+#org.apache.log4j.SimpleLayout
+#org.apache.log4j.TTCCLayout
+log4j.appender.console.layout = org.apache.log4j.PatternLayout
+#define the output type
+log4j.appender.console.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
+#file is set to output to a extra file
+log4j.appender.R = org.apache.log4j.RollingFileAppender
+log4j.appender.R.MaxBackupIndex = 1
+log4j.appender.R.layout = org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] - %m%n
